samples/_failures_safe/1761418308_7e762a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ad8dd02.c: In function ‘compute_bounds’:
./samples/SAFE/__tmp_3ad8dd02.c:135:9: error: expected declaration or statement at end of input
  135 |         if (vertices[i].y > bounds.max.y) bounds.max.y = vertices[i].y;
      |         ^~
./samples/SAFE/__tmp_3ad8dd02.c:135:9: error: expected declaration or statement at end of input
